[package]
name = "peep"
edition = "2018"
version = "0.1.4"
authors = ["ryochack <ryochack@gmail.com>"]
description = "The CLI text viewer tool that works like `less` command on small pane within the terminal window."
license = "MIT"
repository = "https://github.com/ryochack/peep"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = [
    "pager",
    "less",
    "more",
]

[dependencies]
getopts = "0.2"
termios = "0.3"
termion = "1.5"
ctrlc = "3.2"
regex = "1.5"
libc = "0.2"
nix = "0.24"
mio = "0.8"
inotify = "0.10"
unicode-width = "0.1"
